--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <ul>
             <li>
               <strong>
-                <a href="https://github.com/yourusername/credit-card-checker" target="_blank">
+                <a href="https://tomelliott96.github.io/Credit-Card-Checker/" target="_blank">
                   Credit Card Checker:
                 </a>
               </strong>
@@ -78,7 +78,7 @@
             </li>
             <li>
               <strong>
-                <a href="https://github.com/yourusername/dna-simulation" target="_blank">
+                <a href="https://tomelliott96.github.io/p-aequor-dna-lab/" target="_blank">
                   DNA Simulation:
                 </a>
               </strong>
@@ -86,7 +86,7 @@
             </li>
             <li>
               <strong>
-                <a href="https://github.com/yourusername/portfolio-website" target="_blank">
+                <a href="https://tomelliott96.github.io/dev-oracle/" target="_blank">
                   Portfolio Website:
                 </a>
               </strong>
