--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="text">
             <h2>About Me</h2>
             <h3>From Marketing to Development</h3> 
-            <p>I started out in marketing and branding, where I worked on <strong>user journeys, analytics, and campaign optimization</strong>. During my master’s degree, I discovered my passion for the technical side of digital solutions. This curiosity deepened while doing an <strong>intership at the B2B digital agency TOWA</strong>, where I collaborated with developers on webshops, implemented affiliate programs, and managed websites using Storyblok CMS.</p>
+            <p>I started out in marketing and branding, where I worked on <strong>user journeys, analytics, and campaign optimization</strong>. During my master’s degree, I discovered my passion for the technical side of digital solutions. This curiosity deepened while doing an <strong>internship at the B2B digital agency TOWA</strong>, where I collaborated with developers on webshops, implemented affiliate programs, and managed websites using Storyblok CMS.</p>
             <p>Today, I’m training as a </strong>Backend Developer through Codecademy’s career path</strong>, where I work with <strong>JavaScript, Node.js, Express, PostgreSQL and Git</strong>. My goal is to build robust, maintainable systems and contribute to clean, user-centered backend architecture. Thanks to my background, I approach code with both a <strong>technical mindset</strong> and a strong sense for <strong>structured teamwork and product thinking</strong>.</p>
         </div>
         <div class="image">
@@ -90,7 +90,7 @@
                   Portfolio Website:
                 </a>
               </strong>
-              This very site – hand-coded in HTML & CSS to practice layout and structure.
+              This very site – hand-coded in HTML & CSS to practice layout and structure. But wait... that portfolio link? It’s actually a mischievous Dev Oracle in disguise, ready to unveil your fate.
             </li>
           </ul>
         </div>
@@ -120,7 +120,7 @@
             <p>© 2025 Tom Elliott | Web Developer</p>
             <div class="footer-links">
                 <a href="mailto:tom.elliott@gmx.at">Email</a>
-                <a href="#">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/tom-elliott-6491961bb/">LinkedIn</a>
                 <a href="https://github.com/tomelliott96">GitHub</a>
             </div>
         </div>    
