Added Space Maze Game

--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
           <ul>
             <li>
               <strong>
+                <a href="https://github.com/tomelliott96/Space-Maze-Game" target="_blank">
+                  Space Escape:
+                </a>
+              </strong>
+              A terminal-based adventure game built with Node.js. Guide a stranded rocket 🚀 through deep space ✨ to reach Earth 🌍 while avoiding deadly comets ☄️. Features include procedural map generation, BFS-based solvability validation, and real-time terminal input for a uniquely interactive coding experience.
+            </li>            
+            <li>
+              <strong>
                 <a href="https://tomelliott96.github.io/Credit-Card-Checker/" target="_blank">
                   Credit Card Checker:
                 </a>
