--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   Space Escape:
                 </a>
               </strong>
-              A terminal-based adventure game built with Node.js. Guide a stranded rocket 🚀 through deep space ✨ to reach Earth 🌍 while avoiding deadly comets ☄️. Features include procedural map generation, BFS-based solvability validation, and real-time terminal input for a uniquely interactive coding experience.
+              A terminal-based adventure game built with Node.js, featuring procedurally generated maps, guaranteed solvability through a custom BFS algorithm, and real-time user interaction via keyboard input.
             </li>            
             <li>
               <strong>
